VSKY-68: Fix whitespace on page & add logo for Header

--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,4 @@
 /**
- * Scroll Bar
- */
-
-::-webkit-scrollbar {
-  width: 11px;
-  background: var(--scroll-bar-color);
-}
-
-::-webkit-scrollbar-thumb {
-  width: 100%;
-  background: var(--scroll-thumb-color);
-  border-radius: 2em;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: var(--scroll-thumb-hover-color);
-}
-
-/**
  * Main CSS
  */
 
@@ -43,7 +24,8 @@ html,
 body {
   width: 100%;
   height: 100%;
-  padding: 0px;
+  padding: 0;
+  margin: 0;
   overflow-x: hidden;
 }
 
