--- a/src/index.css
+++ b/src/index.css
@@ -4,17 +4,19 @@
 
 @layer base {
   *,
-  ::before,
-  ::after {
+  *::before,
+  *::after {
     font-family: Helvetica Neue, sans-serif;
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
   }
 
-  html {
-    @apply box-border;
-    @apply p-0;
-    @apply m-0;
-    color: #000;
+  html,
+  body {
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
   }
 
   a {
@@ -77,17 +79,4 @@
   .disabled {
     @apply cursor-default pointer-events-none opacity-40;
   }
-}
-
-/* testing apply directive */
-.card {
-  @apply bg-white h-64 rounded overflow-hidden shadow-md relative;
-}
-
-.badge {
-  @apply bg-white text-xs uppercase font-bold rounded-full absolute top-0 ml-2 p-2 mt-2;
-}
-
-.image {
-  @apply w-full h-44 flex justify-center items-center;
 }
